# sparse_tensors

./: .pyproject.toml  AUTHORS.rst  LICENSE  README.rst  bumpversion.cfg  setup.cfg  tox.ini
src/sparse_tensors/: __init__.py  cp.py  tenalg.py
src/tensorly_grad/: optimize_wrapper.py
tests/: __init__.py  test_cp_wopt.py
