

[metadata]
name = sparse_tensors
keywords=sparse_tensors
version = 0.0.1
license = "MIT license",
description = Evaluate tensorly gradients efficiently
long_description = file: README.rst
author = Yngve Mardal Moe & Marie Roald
author_email = yngve.m.moe@gmail.com
url=https://github.com/yngvem/sparse_tensors
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 100


